# oppm

./: README.md  pyproject.toml
oppm/: __innit__.py  __main__.py  download.bat  oppm.py  package_creator.py  pyproject.toml
tools/: manifest-creator.py
