[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oppm"
version = "0.1.0"
description = "Orion Private Package Manager"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["oppm"]

[project.scripts]
oppm = "oppm.__main__:main"
